--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/masterCss/master.css">
     <link rel="stylesheet" href="assets/customCss/customStyle.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <title>Document</title>
+    <title>Cartzilla</title>
 </head>
 <body>
     <main>
